changes in index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -446,7 +446,7 @@
                 <!-- Item -->
                 <div class="s-portfolio__item cbp-item motion graphic">
                     <div class="s-portfolio__img-effect">
-                        <img src="img/970x647/04.jpg" alt="Portfolio Image">
+                        <img src="img/logos/sfappechange.png" alt="Portfolio Image">
                     </div>
                     <div class="s-portfolio__caption-hover--cc">
                         <div class="g-margin-b-25--xs">
@@ -455,7 +455,7 @@
                         </div>
                         <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
                             <li>
-                                <a href="img/970x647/04.jpg" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
+                                <a href="img/logos/sfappechange.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="Portfolio Item <br/> by KeenThemes Inc.">
                                     <i class="ti-fullscreen"></i>
                                 </a>
                             </li>
@@ -468,6 +468,31 @@
                     </div>
                 </div>
                 <!-- End Item -->
+                <!-- Item -->
+                <div class="s-portfolio__item cbp-item motion graphic">
+                    <div class="s-portfolio__img-effect">
+                        <img src="img/logos/LifeRay.png" alt="Portfolio Image">
+                    </div>
+                    <div class="s-portfolio__caption-hover--cc">
+                        <div class="g-margin-b-25--xs">
+                            <h4 class="g-font-size-18--xs g-color--white g-margin-b-5--xs">LIFERAY</h4>
+                            <p class="g-color--white-opacity">Portal.</p>
+                        </div>
+                        <ul class="list-inline g-ul-li-lr-5--xs g-margin-b-0--xs">
+                            <li>
+                                <a href="img/logos/LifeRay.png" class="cbp-lightbox s-icon s-icon--sm s-icon--white-bg g-radius--circle" data-title="LifeRay<br/> Portal.">
+                                    <i class="ti-fullscreen"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" class="s-icon s-icon--sm s-icon s-icon--white-bg g-radius--circle">
+                                    <i class="ti-link"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Item -->
             </div>
             <!-- End Portfolio Gallery -->
         </div>
