--- a/HTML/index.html
+++ b/HTML/index.html
@@ -311,8 +311,8 @@
             </div>
             <div class="s-portfolio">
                 <div id="js__filters-portfolio-gallery" class="s-portfolio__filter-v1 cbp-l-filters-text cbp-l-filters-center">
-                    <div data-filter="*" class="s-portfolio__filter-v1-item cbp-filter-item cbp-filter-item-active">Show All</div>
-                    <div data-filter=".graphic" class="s-portfolio__filter-v1-item cbp-filter-item">Graphic</div>
+                    <div data-filter="*" class="s-portfolio__filter-v1-item cbp-filter-item cbp-filter-item-active">CRM & Portal</div>
+                    <div data-filter=".cloud" class="s-portfolio__filter-v1-item cbp-filter-item">Cloud Computing</div>
                     <div data-filter=".logos" class="s-portfolio__filter-v1-item cbp-filter-item">Logo</div>
                     <div data-filter=".motion" class="s-portfolio__filter-v1-item cbp-filter-item">Motion</div>
                 </div>
@@ -324,7 +324,7 @@
         <div class="container g-margin-b-100--xs">
             <div id="js__grid-portfolio-gallery" class="cbp">
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos motion">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/salesforce.png" alt="Portfolio Image">
                     </div>
@@ -348,7 +348,7 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item graphic">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/heroku.png" alt="Portfolio Image">
                     </div>
@@ -372,7 +372,7 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/outsystems.png" alt="Portfolio Image">
                     </div>
@@ -396,7 +396,7 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/LifeRay.png" alt="Portfolio Image">
                     </div>
@@ -420,7 +420,7 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item logos graphic">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/Sfcommunity.png" alt="Portfolio Image">
                     </div>
@@ -444,7 +444,7 @@
                     </div>
                 </div>
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/sfappechange.png" alt="Portfolio Image">
                     </div>
@@ -469,7 +469,7 @@
                 </div>
                 <!-- End Item -->
                 <!-- Item -->
-                <div class="s-portfolio__item cbp-item motion graphic">
+                <div class="s-portfolio__item cbp-item">
                     <div class="s-portfolio__img-effect">
                         <img src="img/logos/LifeRay.png" alt="Portfolio Image">
                     </div>
@@ -497,7 +497,10 @@
             <!-- End Portfolio Gallery -->
         </div>
         <!-- End Portfolio -->
+        <!-- JP -->
 
+
+        <!-- JP -->
         <!-- Testimonials -->
         <div class="js__parallax-window" style="background: url(img/1920x1080/04.jpg) 50% 0 no-repeat fixed;">
             <div class="container g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
